[project]
name = "ke"
version = "0.1.0"
description = "Knowledge Engine"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "diskcache>=5.6.3",
    "crawl4ai>=0.3.7",
    "openrouter>=0.1.3",
    "kuzu>=0.11.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.format]
